--- a/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
@@ -11,10 +11,10 @@
     <MudGrid Spacing="1">
         <MudItem xs="12" sm="6">
             <MudSelect Label="Стандарт" T="ThreadStandart" Value="ThreadStandart" Variant="Variant.Filled" ValueChanged="OnStandartChanged">
-                <MudSelectItem Value="@(ThreadStandart.Metric)">60° Метрическая</MudSelectItem>
-                <MudSelectItem Value="@(ThreadStandart.BSPP)">55° Трубная цилиндрическая</MudSelectItem>
-                <MudSelectItem Value="@(ThreadStandart.Trapezoidal)">30° Трапецеидальная</MudSelectItem>
-                <MudSelectItem Value="@(ThreadStandart.NPT)">60° Коническая</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (G)</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandart.Trapezoidal)">Трапецеидальная 30° (Tr)</MudSelectItem>
+                <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
             </MudSelect>
         </MudItem>
         <MudItem xs="12" sm="6">
