--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -16,6 +16,9 @@
 @using Sunduk.PWA.Shared
 @using Sunduk.PWA.Components
 @using Sunduk.PWA.Components.CAM
+@using Sunduk.PWA.Components.CAM.ToolTableTools
+@using Sunduk.PWA.Components.CAM.ToolTableTools.Milling
+@using Sunduk.PWA.Components.CAM.ToolTableTools.Turning
 @using Sunduk.PWA.Components.Stuff
 @using Sunduk.PWA.Components.Converters
 @using Sunduk.PWA.Components.Knowledge
